# resolute

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: cache.rs  config.rs  domain_list.rs  edns.rs  geoip.rs  main.rs  router.rs  server.rs
src/upstream/: doh.rs  dot.rs  mod.rs
