[package]
name = "resolute"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-proto = "0.25"
hickory-server = "0.25"
hickory-resolver = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
rustls = "0.23"
maxminddb = "0.27.1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
ipnet = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
base64 = "0.22"
bytes = "1"
async-trait = "0.1"
tokio-rustls = "0.26"
webpki-roots = "1"
dirs = "6"
flate2 = "1"
tokio-socks = "0.5"
prost = "0.14"
xz2 = "0.1"
moka = { version = "0.12", features = ["future"] }

# jemalloc for better memory performance (Linux/macOS only)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
